# PLAReverse

./: .gitignore  CMakeLists.txt  README.md  swinub.json
pokemonCuda/: CMakeLists.txt  deviceConstants.cuh  pokemonCuda.cu  pokemonCuda.h  pokemonCuda.hpp  pokemonVerif.cuh  seedReversal.cuh
pokemon_cuda/: CMakeLists.txt  generatorReversal.cu  generatorReversal.cuh  ivReversal.cu  ivReversal.cuh  pokemon.cu  pokemon.cuh  pokemon_cuda.cu  pokemon_cuda.h  totalReversal.cu  xoroshiro.cuh
resources/: mmo_tables.txt  pokemonData.txt  pokemonEvolutions.txt  pokemonSpecies.txt
src/: gameInference.cpp  gameInference.hpp  main.cpp  matrix.cpp  matrix.hpp  outbreakSpawner.cpp  outbreakSpawner.hpp  permutations.cpp  permutations.hpp  pokemonData.cpp  pokemonData.hpp  pokemonEntity.cpp  pokemonEntity.hpp  pokemonGenerator.cpp  pokemonGenerator.hpp  pokemonSlot.cpp  pokemonSlot.hpp  seedReversal.cpp  seedReversal.hpp  xoroshiro.hpp
src/ui/: MainWindow.cpp  MainWindow.h  PermutationsTab.cpp  PermutationsTab.h  PermutationsTab.ui  PokemonInputTab.cpp  PokemonInputTab.h  PokemonTab.hpp  ReverseRNGTab.cpp  ReverseRNGTab.h  SeedReversalWorker.cpp  SeedReversalWorker.h
